[package]
name = "lavendeux"
version = "0.2.0"
description = "Lavendeux enhances the clipboard"
authors = ["@rscarson"]
license = "MIT"
repository = "https://github.com/rscarson/Lavendeux"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.11", features = [] }

[dependencies]

# Tauri deps
tauri = { version = "2.0.0-alpha.20", features = ["tray-icon"] }
tauri-plugin-dialog = "2.0.0-alpha.7"
tauri-plugin-updater = "2.0.0-alpha.6"
tauri-plugin-notification = "2.0.0-alpha.7"
tauri-plugin-clipboard-manager = "2.0.0-alpha.6"
tauri-plugin-global-shortcut = "2.0.0-alpha.6"
tauri-plugin-single-instance = "2.0.0-alpha.6"
tauri-plugin-autostart = "2.0.0-alpha.6"
tauri-plugin-shell = "2.0.0-alpha.6"
tauri-plugin-cli = "2.0.0-alpha.6"

# Parser
lavendeux_parser2 = { git = "https://github.com/rscarson/lavendeux-parser2.git"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Other deps
embedded-lang = { git = "https://github.com/rscarson/embedded_lang.git" }
enigo = "0.1.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
